<resources>
    <string name="app_name">EasyGaadi</string>
    <string name="loc_trucks">Locate Vehicles</string>
    <string name="trucks_location">Vehicles Location</string>
    <string name="track_truck">Track Vehicle</string>
    <string name="track_str">Track</string>
    <string name="request_quote_tit">Request Quote</string>
    <string name="your_quotes_tit">Your Quotes</string>
    <string name="distance_report">Distance Report</string>
    <string name="create_group">Create Group</string>
    <string name="update_group">Update Group</string>
    <string name="settings">Settings</string>
    <string name="truck_details">Vehicle Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="share_title">Share Your Vehicle</string>
    <string name="insurance_title">Insurance</string>
    <string name="track_order">Track Order</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="singup_str">Sign Up</string>
    <string name="singup_tit">Sign \n Up</string>
    <string name="setcardlimit">Set Card Limit</string>
    <string name="ccms_recharge">CCMS Recharge</string>
    <string name="cardtocard_transfer">Card To Card Transfer</string>
    <string name="internet_str">Please connect to internet</string>
    <string name="exceptionmsg">Please try after sometime.</string>
    <string name="truckinfoupdate">Successfully updated truck info.</string>
    <string name="Deviceserrormsg">Devices not found for this account.</string>
    <string name="deletemessage">Do want to delete the truck?</string>
    <string name="share_str">Share</string>
    <string name="date_str_c">Date</string>
    <string name="recharge">Recharge</string>
    <string name="src_str">Source</string>
    <string name="des_str">Destination</string>
    <string name="customertype_str">Customer\nType:</string>
    <string name="expectedprice">Expected Price</string>
    <string name="nooftrucks">No Of Trucks</string>
    <string name="expectedpricetit">Expected Price:</string>
    <string name="pricetit">Price:</string>
    <string name="pickuppoint">Pickup Point</string>
    <string name="nooftrucks_tit">No of trucks:</string>
    <string name="loadingCharge_tit">Loading charges:</string>
    <string name="unloadingCharge_tit">Unloading charges:</string>
    <string name="comment">Comment</string>
    <string name="balance">Balance</string>
    <string name="exp_on">Expiry On</string>
    <string name="ccms_limit">CCMS Limit</string>
    <string name="monthly_sales_limit">Monthly Sale Limit</string>
    <string name="daily_sales_limit">Daily Sale Limit</string>
    <string name="status">Status</string>
    <string name="goodstype_str">Goods type:</string>
    <string name="trucktype_str">Truck type:</string>
    <string name="nooftruck_str">No of Trucks:</string>
    <string name="date_str">Date:</string>
    <string name="datereq_str">Date Required:</string>
    <string name="dateava_str">Date Available:</string>
    <string name="selectcity">Select City :</string>
    <string name="truckregno">Truck Reg. No</string>
    <string name="distancetra">Distance Travelled</string>
    <string name="timetra">Time Travelled</string>
    <string name="idletime">Idle Time</string>
    <string name="odometer">Odometer</string>
    <string name="avgspeed">Average Speed</string>
    <string name="topspeed">Top Speed</string>
    <string name="truckcity">City</string>
    <string name="truckdate">Date Time</string>
    <string name="go_str">Go</string>
    <string name="fromdate">From Date</string>
    <string name="todate">To Date</string>
    <string name="speed">Speed</string>
    <string name="ccms_transfer">CCMS Transfer</string>
    <string name="cug_transfer">CUG Transfer</string>
    <string name="ccms_transfer_str">CCMS\nTransfer</string>
    <string name="cug_transfer_str">CUG\nTransfer</string>
    <string name="card_transfer_str">Card\nTransfer</string>
    <string name="set_limit_str">Set\nLimit</string>
    <string name="report">Report</string>
    <string name="transfer">Transfer</string>
    <string name="action_refresh">Refresh</string>
    <string name="selectdate">Select Date</string>
    <string name="daterequired">Date Required</string>
    <string name="selecttime">Select Time</string>
    <string name="track">Track</string>
    <string name="tracking_str">Tracking</string>
    <string name="googlemap_str">Google map not found</string>
    <string name="info">Info</string>
    <string name="truck_reg_no">Enter Truck RegNo</string>
    <string name="truck_reg_no_tit">Truck RegNo:</string>
    <string name="goback">Go Back</string>
    <string name="gps_str">GPS</string>
    <string name="gps_str1">GPS\n</string>
    <string name="loadstatus_str">LoadStatus</string>
    <string name="truckavaliablity_str">Truck\nAvailability</string>
    <string name="orders_str">Orders\n</string>
    <string name="buyselltruck_str">Buy/Sell Truck\n</string>
    <string name="selltruck_str">Sell Truck</string>
    <string name="buytruck_str">Buy Truck</string>
    <string name="avaliabletrucks_str">Available Trucks</string>
    <string name="avatrucks">avaliabletrucks</string>
    <string name="trucks">Trucks</string>
    <string name="trucks1">Trucks\n</string>
    <string name="goodstype_str1">Goods\nType</string>
    <string name="trucktypes_str1">Truck\nType</string>
    <string name="info_tit">Info</string>
    <string name="quotes_tit">Quotes</string>
    <string name="loads_tit">Loads</string>
    <string name="loads_tit1">Loads\n</string>
    <string name="postload_tit">Post Load</string>
    <string name="postload_tit1">Post\nLoad</string>
    <string name="bloads_tit">Book Load</string>
    <string name="btruck_tit">Book Truck</string>
    <string name="home_str">Home</string>
    <string name="loadingcharges">Loading Charges</string>
    <string name="unloadingcharges">Unloading Charges</string>
    <string name="refresh">Refresh</string>
    <string name="redeem">Redeem</string>
    <string name="stops">Stops</string>
    <string name="rewardpoints">Loyalty Points</string>
    <string name="action_add">Add</string>
    <string name="add_operating_routes">Add Operating Routes</string>
    <string name="action_group">GroupMap</string>
    <string name="action_report">Report Problem</string>
    <string name="company_name">EasyGaadi</string>
    <string name="fullname_ht">Enter Fullname</string>
    <string name="username_str">Username :</string>
    <string name="password_str">Password :</string>
    <string name="customerid_str">CustomerID :</string>
    <string name="address_ht">Enter Address</string>
    <string name="username_ht">Enter Username</string>
    <string name="mobile_ht">Enter Mobileno</string>
    <string name="password_ht">Enter Password</string>
    <string name="forgotpassword">Forgot password ?</string>
    <string name="deletetruck">Delete Truck</string>
    <string name="forgotpassword_str">Forgot\npassword ?</string>
    <string name="login_str">Login</string>
    <string name="apply_str">Apply</string>
    <string name="delete_str">Delete</string>
    <string name="submit_str">Submit</string>
    <string name="book_str">Book</string>
    <string name="booking_str">booking</string>
    <string name="rememberme">Remember me</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="address_error">Address must not be empty</string>
    <string name="username_error">Username must not be empty</string>
    <string name="rc_no_error">RC No must not be empty</string>
    <string name="tracklocation">Track Location</string>
    <string name="source_error">Source must not be empty</string>
    <string name="destination_error">Destination must not be empty</string>
    <string name="noooftrucks_error">No of trucks must not be empty</string>
    <string name="pickup_error">Pickup point must not be empty</string>
    <string name="selectdate_error">Please select date</string>
    <string name="selecttime_error">Please select time</string>
    <string name="fullname_error">Fullname must not be empty</string>
    <string name="price_error">Price must not be empty</string>
    <string name="price1_error">Price is not valid</string>
    <string name="email_error">EmailId must not be empty</string>
    <string name="truckreg_error">Truck RegNo. must not be empty</string>
    <string name="mobile_error">Mobileno must not be empty</string>
    <string name="mobilelength_error">Mobileno must be 10 digit</string>
    <string name="password_error">Password must not be empty</string>
    <string name="customerid_error">CustomerID must not be empty</string>
    <string name="emailvalid_error">EmailId is not valid</string>
    <string name="loginFailed">Login failed .Please enter correct details</string>
    <string name="smsFailed">SMS failed to send due to invalid email id .Please enter valid email id</string>
    <string name="smsSuccess">SMS sent successfully to your registered mobile no.</string>
    <string name="pta">Please try again</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="reenternew_pwd">Reenter\nNew Password</string>
    <string name="insurance_expiry">Insurance\nExpiry</string>
    <string name="insurance_amount">Insurance\nAmount</string>
    <string name="nationalpermit_exp">National\nPermit\nExpiry</string>
    <string name="nationalpermit">National Permit Available</string>
    <string name="fitness_expiry">Fitness\nExpiry</string>
    <string name="rc_no">RC No</string>
    <string name="contactName">Contact\nName</string>
    <string name="contactPhone">Contact\nPhone</string>
    <string name="contactEmail">Contact\nEmail</string>
    <string name="yprice_str">Your Price</string>
    <string name="ypoints_str">Your Points:</string>
    <string name="pricet_str">Price:</string>
    <string name="status_tit">Status:</string>
    <string name="orderstatus_tit">Order Status:</string>
    <string name="currentloc_tit">Current Location:</string>
    <string name="pendingamt_tit">Pending Amount:</string>
    <string name="orderamt_tit">Order Amount:</string>
    <string name="reqid_tit">RequestId</string>
    <string name="message_str">Message:</string>
    <string name="comment_tit">Comment:</string>
    <string name="dateorderes_tit">Date Ordered:</string>
    <string name="priceload_str">Quote Price</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="update_truck">Truck Info</string>
    <string name="createtruck">Create Truck</string>
    <string name="repostload">Repost Load</string>
    <string name="repostloadtit">Repost</string>
    <string name="update">Update</string>
    <string name="gps_tracking">GPS Tracking</string>
    <string name="gps_tracking_tit">GPS Tracking:</string>
    <string name="dateposted_tit">Date Posted:</string>
    <string name="id_tit">Id</string>
    <string name="quote_tit">Quote</string>
    <string name="comment_head">Comment</string>
    <string name="confirm_tit">Confirm</string>
    <string name="close">Close</string>
    <string name="action_logout">Logout</string>
    <string name="trips">Trips</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="change_map">Change map</string>
    <string name="source_ht">Source</string>
    <string name="des_ht">Destination</string>
    <string name="delete">Delete</string>
    <string name="level_str">Level</string>
    <string name="position_str">Position</string>
    <string name="vehicle_str">Vehicle</string>
    <string name="service_on_str">Service\nOn</string>
    <string name="current_km_str">Current\nkm</string>
    <string name="exp_km_str">Exp Km</string>
</resources>