<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentTop="true"
    android:id="@+id/title_tyres"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/title_bg"
    android:weightSum="6">
    <TextView
        android:id="@+id/vehicle_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_weight="1"
        android:text="@string/vehicle_str"/>
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/level_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_weight="1"
        android:text="@string/level_str"/>
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/position_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_weight="1"
        android:text="@string/position_str"/>
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/exp_on_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="1dp"
        android:layout_weight="1"
        android:text="@string/service_on_str"/>
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/current_km_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="1dp"
        android:layout_weight="1"
        android:text="@string/current_km_str"/>
    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/exp_km_tv"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="1dp"
        android:layout_weight="1"
        android:text="@string/exp_km_str"/>

</LinearLayout>

