<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/infoitem_bg"
    android:minHeight="50dp"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/truck_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.15"
        android:contentDescription="@string/update"
        android:padding="1dp"
        android:src="@drawable/tr" />

    <TextView
        android:id="@+id/truck_regno_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".98"
        android:padding="1dp"
        android:text="@string/truckregno"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/truck_up_bg"
        android:gravity="center"
        android:minLines="2"
        android:padding="2dp"
        android:text="@string/truckcity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight=".95"
        android:background="@drawable/truck_up_bg"
        android:gravity="center"
        android:minLines="2"
        android:padding="2dp"
        android:text="@string/truckdate"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.13"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/deletebtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/delete_str"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="2dp"
            android:src="@drawable/delete"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/editbtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="5dp"
            android:src="@drawable/ic_pen"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>