<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

   <!-- <item
        android:id="@+id/action_rewards"
        android:icon="@drawable/ic_gift_icon"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/rewardpoints"
        app:showAsAction="always"/>-->
    <item
        android:id="@+id/action_trips"
        android:icon="@drawable/ic_trip_list"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/trips"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_groupmap"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/action_group"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/action_refresh"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/refresh"
        app:showAsAction="always"/>
    
   <!--  <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="Report"
        app:showAsAction="always"/> -->

</menu>