<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    android:orientation="horizontal"
    android:background="@drawable/srcdesbg"
    android:layout_marginBottom="5dp"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/editextsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.7" >

        <AutoCompleteTextView
            android:id="@+id/source_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_ht"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textCapWords|textAutoComplete" />

        <AutoCompleteTextView
            android:id="@+id/destination_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des_ht"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textCapWords|textAutoComplete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/delete_imgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight=".3"
        android:contentDescription="@string/delete"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>